crates/keron-lang/tests/corpus/errors/check/for_body_non_void.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Void`, found `Int`
  --> 4:3
  |
4 |   x
  |   ^
